--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shiift.github.io",
+  "name": "songdickson.github.io",
   "version": "1.0.0",
   "description": "my personal github pages site",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/shiift/shiift.github.io.git"
+    "url": "https://github.com/liamdickson/songdickson.github.io.git"
   },
   "author": "Liam Dickson",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shiift/shiift.github.io/issues"
+    "url": "https://github.com/liamdickson/songdickson.github.io/issues"
   },
-  "homepage": "https://github.com/shiift/shiift.github.io",
+  "homepage": "https://github.com/liamdickson/songdickson.github.io",
   "devDependencies": {
     "babel-core": "^5.6.15",
     "babel-loader": "^5.2.2",
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "lodash.partial": "^3.1.0",
+    "photoswipe": "^4.0.8",
     "react": "^0.13.3",
     "react-bootstrap": "^0.23.5"
   }
