--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "songdickson.github.io",
+  "name": "liamdickson.github.io",
   "version": "1.0.0",
   "description": "my personal github pages site",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/liamdickson/songdickson.github.io.git"
+    "url": "https://github.com/liamdickson/liamdickson.github.io.git"
   },
   "author": "Liam Dickson",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/liamdickson/songdickson.github.io/issues"
+    "url": "https://github.com/liamdickson/liamdickson.github.io/issues"
   },
-  "homepage": "https://github.com/liamdickson/songdickson.github.io",
+  "homepage": "https://github.com/liamdickson/liamdickson.github.io",
   "devDependencies": {
     "babel-core": "^5.6.15",
     "babel-loader": "^5.2.2",
