--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "lodash.partial": "^3.1.0",
     "photoswipe": "^4.0.8",
     "react": "^0.13.3",
-    "react-bootstrap": "^0.23.5"
+    "react-bootstrap": "^0.23.5",
+    "ampersand-router": "~3.0.2",
+    "fluxible": "~0.4.12",
+    "ampersand-state": "~4.5.6"
   }
 }
