--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "webpack": "^1.10.0"
   },
   "dependencies": {
+    "ampersand-router": "~3.0.2",
+    "ampersand-state": "~4.5.6",
+    "fluxible": "~0.4.12",
+    "jquery": "^2.1.4",
     "lodash.partial": "^3.1.0",
     "photoswipe": "^4.0.8",
+    "q": "^1.4.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.23.5",
-    "ampersand-router": "~3.0.2",
-    "fluxible": "~0.4.12",
-    "ampersand-state": "~4.5.6"
+    "underscore": "^1.8.3"
   }
 }
